# Gate_SDK

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LOAD_PACK__REGISTRY.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/governance/: README.md
.github/workflows/: _l9-analysis.yml  ci.yml  coverage.yml  integration.yml  l9-analysis-merge.yml  l9-analysis-nightly.yml  l9-analysis-release.yml  l9-analysis-supply-chain.yml  l9-analysis.yml  l9-governance-validate.yml  l9-lint-test.yml  l9-sdk-contract-check.yml  nightly.yml  pre-commit-ci.yml  release-publish.yml  release.yml
contracts/: NODE_REGISTRATION_SPEC.md  ROUTING_POLICY_SPEC.md  TRANSPORT_PACKET_SPEC.md  transport-packet.schema.json
docs/: gate-client.md  migration-from-packet-envelope.md  node-runtime.md  orchestrator-pattern.md  transport-packet.md
examples/orchestrator_node/: README.md  app.py  handlers.py  spec.yaml
examples/packets/: orchestrated_request.json  replay_request.json  simple_request.json
examples/worker_node/: README.md  app.py  handlers.py  spec.yaml  worker_node_template.py
scripts/: generate_schema.py  release.sh  validate_contracts.py
src/constellation_node_sdk/: __init__.py
src/constellation_node_sdk/gate/: __init__.py  client.py  config.py  errors.py  policy.py  registration.py
src/constellation_node_sdk/orchestrator/: base.py  merge.py  packet_builder.py  retry.py  state.py  step_executor.py
src/constellation_node_sdk/runtime/: __init__.py  app.py  config.py  errors.py  execution.py  handlers.py  inbound_policy.py  lifecycle.py  observability.py  preflight.py
src/constellation_node_sdk/security/: __init__.py  delegation.py  errors.py  signing.py  validation.py  verification.py
src/constellation_node_sdk/transport/: __init__.py  codec.py  errors.py  hashing.py  hop_trace.py  lineage.py  models.py  packet.py  provenance.py  tenant.py
tests/: conftest.py
tests/gate/: test_client.py  test_config.py  test_policy.py  test_registration.py
tests/integration/: test_external_direct_to_node_blocked.py  test_gate_only_egress.py  test_gate_relay_to_node_allowed.py  test_orchestrator_via_gate.py  test_worker_to_gate_roundtrip.py
tests/orchestrator/: test_base.py  test_merge.py  test_packet_builder.py  test_retry.py  test_state.py  test_step_executor.py
tests/runtime/: test_app.py  test_config_defaults.py  test_errors.py  test_execution.py  test_gate_only_ingress.py  test_handlers.py  test_preflight.py  test_relay_route.py
tests/security/: test_delegation.py  test_signing.py  test_validation.py  test_verification.py
tests/transport/: test_codec.py  test_hashing.py  test_hop_trace.py  test_lineage.py  test_provenance.py  test_schema_parity.py  test_tenant.py  test_transport_packet.py
