[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constellation-node-sdk"
version = "1.0.0"
description = "Canonical TransportPacket SDK for Constellation worker and orchestrator nodes"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "OpenAI" }
]
dependencies = [
  "cryptography>=46.0.7",
  "fastapi>=0.135.3",
  "httpx>=0.28.1",
  "prometheus-client>=0.25.0",
  "pydantic>=2.12.5",
  "python-json-logger>=4.1.0",
  "pyyaml>=6.0.3",
  "starlette>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.20.0",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.10",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
constellation_node_sdk = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["constellation_node_sdk"]
