[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "constellation-node-sdk"
version = "1.0.1"
description = "L9 Constellation Node SDK — TransportPacket runtime, Gate client, and node factory"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "httpx>=0.27.0",
  "cryptography>=43.0.0",
  "prometheus-client>=0.21.0",
  "python-json-logger>=3.2.0",
  "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.0",
  "types-PyYAML>=6.0.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
